deployments/jenkins/01-namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
