deployments/jenkins/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
    - name: slaves
      port: 50000
      targetPort: slaves
