deployments/jenkins/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    traefik.ingress.kubernetes.io/ingress.class: "traefik-external"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cr
spec:
  rules:
    - host: jenkins.rcomanne.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  name: web
  tls:
    - hosts:
        - jenkins.rcomanne.nl
